--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@ h6 {
 }
 
 .layout {
-  @apply my-10 mx-5;
+  @apply py-10 mx-5;
 }
 
 .hamburger {
@@ -140,7 +140,7 @@ h6 {
 
 @media (max-width: 639px) {
   .wrapper_menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     right: -100%;
