--- a/app/globals.css
+++ b/app/globals.css
@@ -37,10 +37,11 @@ body {
 
 li {
   list-style: none;
-  transition: color 250ms ease;
+  transition: all 250ms ease;
 }
 
-li:hover {
+li:hover,
+button:hover {
   opacity: 0.7;
 }
 
@@ -58,6 +59,7 @@ a {
 
 button {
   cursor: pointer;
+  transition: all 250ms ease;
 }
 
 p,
