display featured section for mobile screen size with swiper js

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,6 @@ button:hover {
 }
 
 img,
-span,
 input,
 button {
   display: block;
@@ -156,4 +155,8 @@ h6 {
 
 .wrapper_menu.active {
   right: 0;
+}
+
+.mySwiper {
+  width: 80%;
 }
