--- a/app/globals.css
+++ b/app/globals.css
@@ -165,6 +165,26 @@ h6 {
   stroke-dashoffset: -64px;
 }
 
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid var(--primary);
+  border-bottom-color: var(--secondary);
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (max-width: 639px) {
   .wrapper_menu {
     position: fixed;
